# robot_with_lidar_obstacle_avoid_astar

./: 使用教程
SRC/move_base_sim/: camera_nav.launch  lidar_nav.launch  sim_move.launch  slam.launch
SRC/move_base_sim/base_local_planner/: CMakeLists.txt
SRC/move_base_sim/costmap_2d/: CMakeLists.txt  package.xml
SRC/move_base_sim/dwa_local_planner/: CMakeLists.txt
SRC/move_base_sim/global_planner/: CMakeLists.txt  package.xml
SRC/move_base_sim/nav_core/: CMakeLists.txt
SRC/simulation/autolabor_description/: urdf.rviz
SRC/simulation/autolabor_fake/: CMakeLists.txt
SRC/simulation/autolabor_fake/src/: autolabor_fake_node.cpp
SRC/simulation_launch/launch/: create_map_simulation.launch  move_base_simulation.launch  sim_move_simulation.launch
SRC/simulation_launch/scripts/: listener.py
__MACOSX/SRC/move_base_sim/: ._costmap_2d
